# sbrl

./: Makefile  README.md  analyze.c  mytime.h  predict.c  pysbrl.c  rule.h  rulelib.c  sbrlmod.c  sbrlmod.h  tdata_R.label  tdata_R.out  testprog.c  train.c  ttt_test.label  ttt_test.out  ttt_train.label  ttt_train.out
pysbrl/: .pysbrl.c.swp  README.md  pysbrl.c  setup.py  test.py  utils.h
sbrl/: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
sbrl/R/: sbrlmod.R
sbrl/data/: tictactoe.rda
sbrl/man/: get_data_feature_mat.Rd  predict.sbrl.Rd  print.sbrl.Rd  sbrl-package.Rd  sbrl.Rd  tictactoe.Rd
sbrl/src/: Makevars.in  Makevars.win  mytime.h  rcpp_module.cpp  rule.h  rulelib.c  rulelib.cpp  train.c  train.cpp
test_deta/: 1.label  1.out
